feat(admin): add loop list on edit event panel and addd delete loop feature

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,13 @@
 {
-  "ADMIN": "Administration",
+  "ADMIN": {
+    "TITLE": "Administration",
+    "EVENT": {
+      "ADD_LOOP": {
+        "TITLE": "Ajouter un parcours",
+        "ACTION": "Ajouter"
+      }
+    }
+  },
   "TYPES": {
     "LRFN": "Friday Night",
     "RANDOXYGENE": "Randoxygène",
