fix(front): paginate event list, add go back button, add delete event button and delete track button, add openRunnerId

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -6,7 +6,13 @@
         "TITLE": "Ajouter un parcours",
         "ACTION": "Ajouter",
         "DATE": "Date"
-      }
+      },
+      "CONFIRM_DELETE": "Évènement supprimé"
+    },
+    "TRACK": {
+      "CONFIRM_SAVE": "Parcours enregistré",
+      "CONFIRM_DELETE": "Parcours supprimé",
+      "SAVE": "Parcours sauvergardé"
     }
   },
   "TYPES": {
