feat(admin): add reset password feature

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,6 +14,13 @@
       "CONFIRM_DELETE": "Parcours supprimé",
       "SAVE": "Parcours sauvergardé",
       "SELECT_FILE": "Choix fichier KML"
+    },
+    "LOGIN": {
+      "CONNEXION": "Connexion",
+      "RESET": "Reset du mot de passe",
+      "EMAIL_SENT": "Un email vous a été envoyé",
+      "NO_EMAIL": "Veuillez spécifier un email",
+      "ERROR": "Une erreur s'est produite sur l'envoi de l'email"
     }
   },
   "TYPES": {
