fix(admin): fix villeneuve label

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -27,7 +27,8 @@
     "LRFN": "Friday Night",
     "RANDOXYGENE": "Randoxygène",
     "ROL_CITY": "ROL City",
-    "ROL_PARADE": "ROL Parade"
+    "ROL_PARADE": "ROL Parade",
+    "VILLENEUVE": "Villeneuve d'Ascq"
   },
   "TRACK": "Parcours",
   "EVENT": "Évènement",
